After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 612506 - mutter 2.29.0 fails to compile on Solaris
mutter 2.29.0 fails to compile on Solaris
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
2.29.x
Other Solaris
: Normal critical
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2010-03-10 22:18 UTC by Brian Cameron
Modified: 2010-03-16 16:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch fixing problem (394 bytes, patch)
2010-03-10 22:18 UTC, Brian Cameron
none Details | Review
Include <sys/wait.h> for WIFEXITSTATUS/WIFEXITED (768 bytes, patch)
2010-03-16 16:30 UTC, Owen Taylor
committed Details | Review

Description Brian Cameron 2010-03-10 22:18:15 UTC
Created attachment 155793 [details] [review]
patch fixing problem

When linking mutter 2.29.0, it fails with this error:

pkgbuild: Undefined                     first referenced
pkgbuild:  symbol                           in file
pkgbuild: WEXITSTATUS                         delete.o
pkgbuild: WIFEXITED                           delete.o
pkgbuild: ld: fatal: symbol referencing errors. No output written to mutter

Simply adding "#include <sys/wait.h>" to src/core/delete.c as in the attached patch fixes this.
Comment 1 Owen Taylor 2010-03-16 16:30:01 UTC
The following fix has been pushed:
67f8a33 Include <sys/wait.h> for WIFEXITSTATUS/WIFEXITED
Comment 2 Owen Taylor 2010-03-16 16:30:03 UTC
Created attachment 156283 [details] [review]
Include <sys/wait.h> for WIFEXITSTATUS/WIFEXITED

Exit status macros are specified by POSIX to be in <sys/wait.h>.
Fixes compilation on Solaris.

Reported by Brian Cameron