src/core/delete.c
@@ -32,6 +32,7 @@
 #include "workspace.h"
 
 #include <sys/types.h>
+#include <sys/wait.h>
 #include <signal.h>
 #include <unistd.h>
 #include <errno.h>
